--- a/css/my-first-webpage.css
+++ b/css/my-first-webpage.css
@@ -7,3 +7,13 @@ li {
 body  {
   background-color: slategrey;
 }
+h1 {
+    color: #FF4500;
+    text-align: center;
+}
+
+p {
+  font-style: oblique;
+  font-family: "comic sans ms", cursive, sans-serif;
+
+}
